--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,11 +4,26 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
+
+.header--secondary {
+    color: white;
+    font-weight: 300px;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    font-size: 42;
+    color: gray;
+}
+
+/* LINKS */
 
 .link--cta {
     font-size: 16px;
